@@ -102,7 +102,7 @@ patch_cmds=(
 # the Linux kernel headers), in which case pkgadd can't be called interactively.
 leavefiles=yes
 
-# Should we run the package's checksuite?
+# Should we run the package's testsuite?
 check=no
 
 # Do we want to optimize?
@@ -143,7 +143,7 @@ function build_pkg {
 	make
 }
 
-# Commands to run the package's checksuite.
+# Commands to run the package's testsuite.
 function check_pkg {
 	make check
 }
